top banner added

--- a/index.html
+++ b/index.html
@@ -6,8 +6,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Saika Portfolio</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
 </head>
 <body>
-    
+    <section class="top-banner">
+     <div class="half-width">
+         <h1>Welcome To </h1>
+         <h1><span class="orange-color">Jhangkar Mahbub</span> world</h1>
+         <h3>Build Climber and Train Stopper</h3>
+         <p>you might saw me jumping, climbing buidlings,and stopping trains. but nobody pays me a dime for that work. That's why I am learning and mastering web development. I will not stop until l become the Web Development Hero</p>
+         <a class="link-button" target="blank" href=""> HIRE ME</a>
+     </div> 
+     <div>
+        <img src="images/jhangkar.png" alt="">
+     </div>
+    </section>
 </body>
 </html>
