--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <section class="top-banner">
-     <div class="half-width">
+     <div>
          <h1>Welcome To </h1>
          <h1><span class="orange-color">Jhangkar Mahbub</span> world</h1>
          <h3>Build Climber and Train Stopper</h3>
@@ -23,5 +23,17 @@
         <img src="images/jhangkar.png" alt="">
      </div>
     </section>
+    <section class="dream-big">
+        <div>
+            <img src="images/jhankar2.png">
+        </div>
+        <div>
+            <h1>Dream Big</h1>
+            <h2>Become a Web Developer</h2>
+            <p>I already learned the basic HTML and CSS. I can build any simple website. I can even teach my grandma how to make simple website. My goal is to build 3 website and learn advanced topics.</p>
+        </div>
+
+    </section>
+    <a class="link-button" target="blank" href="">Download Here </a>
 </body>
 </html>
