--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
 </head>
 <body>
-    <section class="top-banner">
+    <section class="top-banner flexible-container">
      <div>
          <h1>Welcome To </h1>
          <h1><span class="orange-color">Jhangkar Mahbub</span> world</h1>
@@ -23,11 +23,11 @@
         <img src="images/jhangkar.png" alt="">
      </div>
     </section>
-    <section class="dream-big">
+    <section class="dream-big flexible-container">
         <div>
             <img src="images/jhankar2.png">
         </div>
-        <div>
+        <div class="half-width">
             <h1>Dream Big</h1>
             <h2>Become a Web Developer</h2>
             <p>I already learned the basic HTML and CSS. I can build any simple website. I can even teach my grandma how to make simple website. My goal is to build 3 website and learn advanced topics.</p>
@@ -35,5 +35,23 @@
 
     </section>
     <a class="link-button" target="blank" href="">Download Here </a>
+    <section class="experience-area">
+        <h1>Experiences</h1>
+        <div class="flexible-container">
+             <div id="full-stack-dev" class="experience-item">
+                 <h2>Full Stack Developer</h2>
+                 <h3 class="orange-color">2022-present| Pro Level Developer</h3>
+                    <p>I am the master of HTML,CSS and JAVAscript. I know everything needed to make a website function,efficient. I didn't stop with the web . I weeeenet beyond with the most ppular javascript framework called vue JS. I even know the Development, sereveer and sequrity. i will give you 100% web solution.</p>
+            </div>
+            <div id="web-dev-exp" class="experience-item">
+                 <h2>Baby Web Developer</h2>
+                 <h3 class="orange-color">2022-2024| Programming Hero Learner</h3>
+                    <p>hey didn't offer me a job. But I made myself as a remove web developer. I made their website and showed it to them.they liked it. And uploaded the content it was fun working at programming Hero.</p>
+            </div>
+        </div>
+    </section>
+    <footer>
+        <p>Peter Parker 2021, programming Hero initiative</p>
+    </footer>
 </body>
 </html>
